@@ -66,6 +66,7 @@ depth: 1
  * Allow viewsets to define a common set of view kwargs (Matt Westcott)
  * Migrate the editor unsaved messages popup to be driven by Stimulus using the shared `w-message` controller (LB (Ben) Johnston, Hussain Saherwala)
  * Add support for tooltip position in `human_readable_date` tooltip (Rohit Sharma)
+ * Do not use jest inside `stubs.js` to prevent Storybook from crashing (LB (Ben) Johnston)
 
 
 ## Upgrade considerations - changes affecting all projects
